# srv-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: client.rs  resolver.rs
src/: lib.rs  record.rs
src/client/: cache.rs  mod.rs  policy.rs
src/resolver/: hickory.rs  manual.rs  mod.rs  trust_dns.rs
src/resolver/libresolv/: ffi.rs  mod.rs
tests/: run_integration_tests.rs  test_lookup_error.rs  test_simple_lookup_srv_multiple.rs  test_simple_lookup_srv_single.rs  test_trivial_with_default_config.rs
tests/harness/: dns_server.rs  mod.rs
tests/sandbox/: components.rs  mod.rs
tests/sandbox/components/: dns.rs
tests/tests/: helpers.rs  mod.rs  test_resolver_simple_lookup_srv_multiple.rs  test_resolver_simple_lookup_srv_single.rs  test_simple_lookup_srv_multiple.rs  test_simple_lookup_srv_single.rs  test_trivial_with_default_config.rs
