[package]
name = "srv-rs"
version = "0.2.0"
authors = ["Max Heller <max.a.heller@gmail.com>"]
edition = "2018"
description = "Rust client for communicating with SRV-located services"
readme = "README.md"
homepage = "https://github.com/deshaw/srv-rs"
repository = "https://github.com/deshaw/srv-rs"
license = "BSD-3-Clause"
keywords = ["srv", "record", "dns", "resolve", "libresolv"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["log"]

libresolv = ["libresolv-sys"]
log = ["tracing"]
trust-dns = ["trust-dns-resolver"]

[dependencies]
arc-swap = "1.8.0"
async-trait = "0.1"
futures-util = "0.3"
http = "0.2"
libresolv-sys = { version = "0.2", optional = true }
rand = { version = "0.9.2", default-features = false, features = [
    'thread_rng',
] }
thiserror = { version = "2.0.17", default-features = false }
tracing = { version = "0.1", optional = true }
trust-dns-resolver = { version = "0.19", optional = true }

[dev-dependencies]
criterion = "0.3"
futures = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }

[[bench]]
name = "client"
harness = false

[[bench]]
name = "resolver"
harness = false
