[package]
name = "srv-rs"
version = "0.2.0"
authors = ["Max Heller <max.a.heller@gmail.com>"]
edition = "2018"
description = "Rust client for communicating with SRV-located services"
readme = "README.md"
homepage = "https://github.com/deshaw/srv-rs"
repository = "https://github.com/deshaw/srv-rs"
license = "BSD-3-Clause"
keywords = ["srv", "record", "dns", "resolve", "libresolv"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["log"]

libresolv = ["resolv"]
log = ["tracing"]
hickory = ["hickory-resolver"]

[dependencies]
arc-swap = "1.8.0"
async-trait = "0.1"
futures-util = "0.3"
http = "0.2"
rand = { version = "0.9.2", default-features = false, features = [
    'thread_rng',
] }
# As of 2026-01-28, version 0.4 of resolv has not been released but is the only
# version building with current versions of bindgen-cli [0]
#
# [0] https://github.com/mikedilger/resolv-rs/issues/11
resolv = { version = "0.4", git = "https://github.com/mikedilger/resolv-rs.git", rev = "a0349cb", optional = true }
thiserror = { version = "2.0.17", default-features = false }
tracing = { version = "0.1.43", optional = true }
hickory-resolver = { version = "0.25", optional = true }

[dev-dependencies]
srv-rs = { path = ".", features = ["libresolv", "hickory"] }
criterion = "0.8.1"
futures = "0.3"
hyper = "0.13"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tempfile = "3.24.0"
owo-colors = "4.2.3"
hickory-proto = "0.25"
rayon = "1.11.0"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "resolver"
harness = false

[[test]]
name = "run_integration_tests"
harness = false
