[package]
name = "srv-rs"
version = "1.0.1"
authors = [
    "The D. E. Shaw Group <opensource@deshaw.com>",
    "Max Heller <max.a.heller@gmail.com>",
]
edition = "2024"
rust-version = "1.85"
description = "Rust client for communicating with SRV-located services"
readme = "README.md"
homepage = "https://github.com/deshaw/srv-rs"
repository = "https://github.com/deshaw/srv-rs"
license = "BSD-3-Clause"
keywords = ["srv", "record", "dns", "resolve", "hickory"]
categories = ["network-programming"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["log"]

libresolv = ["resolv"]
log = ["tracing"]
hickory = ["hickory-resolver"]

[dependencies]
arc-swap = "1.8.0"
async-trait = "0.1"
futures-util = "0.3"
http = "1.4.0"
rand = { version = "0.9.2", default-features = false, features = [
    'thread_rng',
] }
resolv = { version = "0.4", optional = true }
thiserror = { version = "2.0.17", default-features = false }
tracing = { version = "0.1.43", optional = true }
hickory-resolver = { version = "0.25", optional = true }

[dev-dependencies]
srv-rs = { path = ".", features = ["libresolv", "hickory"] }
criterion = "0.8.1"
futures = "0.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3.24.0"
hickory-proto = "0.25"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "resolver"
harness = false
